Bug 1637339: Only validate constrained values when element read succeeded. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D75570